--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,16 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   dio: ^5.4.3+1
-  connectivity_plus: ^6.0.3
   get: ^4.6.6
-  shared_preferences: ^2.2.3
   flutter_svg: ^2.0.10+1
   firebase_core: ^3.0.0
-  url_launcher: ^6.3.0
-  toast: ^0.3.0
   firebase_auth: ^5.0.0
   google_sign_in: ^6.2.1
   audioplayers: ^6.0.0
+  flutter_launcher_icons: ^0.13.1
+  toast: ^0.3.0
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +55,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
-
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/screenshot/Quran.png"
+  min_sdk_android: 21
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
